# boilerplate

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Benchmarks/BoilerPlate/: Benchmark.cpp  CMakeLists.txt
Headers/BoilerPlate/: Boilerplate.h
Sources/BoilerPlate/Executable/: CMakeLists.txt  Main.cpp
Tests/BoilerPlate/: CMakeLists.txt  Test.cpp
